@@ -9,8 +9,6 @@ BUGS
 - Allow to view a set of specified printers in the job viewer
   (instead of "one or all").
 
-- Make KDEPrint differentiate "accept/reject" and "enable/disable"
-
 - remove KMManager::configure() (obsolete now)
 
 
